# openab

./: AWESOME.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.agentcore  Dockerfile.antigravity  Dockerfile.builder  Dockerfile.ci  Dockerfile.claude  Dockerfile.codex  Dockerfile.copilot  Dockerfile.cursor  Dockerfile.devin  Dockerfile.final  Dockerfile.gateway  Dockerfile.gemini  Dockerfile.grok  Dockerfile.hermes  Dockerfile.mimocode  Dockerfile.native  Dockerfile.opencode  Dockerfile.package  Dockerfile.pi  Dockerfile.unified  README.md  README.zh-TW.md  config.toml.example  docker-bake.hcl
.github/workflows/: build-binaries.yml  build-gateway.yml  build-images.yml  build-oabctl.yml  build-operator.yml  bundle-pre-seed-utils.yml  ci.yml  close-stale-prs.yml  close-unlinked-stale-issues.yml  docker-smoke-test-unified.yml  docker-smoke-test.yml  gateway-release-pr.yml  line.yml  pr-bot-review.yml  pr-discussion-check.yml  pr-preview.yml  pre-beta-build.yml  release-pr.yml  release.yml  slack.yml  snapshot-build.yml  stale-contributor.yml
agy-acp/src/: main.rs
charts/openab/: Chart.yaml  README.md  values.yaml
charts/openab-telegram/: README.md
charts/openab/templates/: NOTES.txt  configmap.yaml
charts/openab/tests/: agent-image_test.yaml  config-url_test.yaml  configtoml-passthrough_test.yaml  workspace-aliases_test.yaml
crates/openab-core/: Cargo.toml
crates/openab-core/src/: adapter.rs  ambient.rs  config.rs  discord.rs  dispatch.rs  gateway.rs  pre_seed.rs  slack.rs
crates/openab-core/src/acp/: agentcore.rs  connection.rs  pool.rs
crates/openab-gateway/src/: lib.rs
crates/openab-gateway/src/adapters/: line.rs  telegram.rs
docs/: agentcore.md  antigravity.md  canary-tests.md  claude-code.md  codex.md  config-reference.md  control-directives.md  copilot.md  cursor.md  devin.md  discord.md  feishu.md  gemini.md  github-token-setup.md  google-chat.md  grok.md  hermes.md  hooks.md  inbound-attachments.md  kiro.md  line.md  migrate-to-configtoml.md  msteams-selfhosted.md  native-agent.md  oabctl.md  opencode.md  openshell.md  pi.md  slash-commands.md  tailscale.md  telegram.md  wecom.md  workspaces.md
docs/adr/: configurl-over-helm-rendering.md  control-directives.md  ecs-control-plane.md  identity-trust-none.md  secrets-management.md
docs/refarch/: github-app-token-vending.md  kiro-with-defined-agents.md  telegram-cloudflare-tunnel.md
gateway/: Cargo.toml
gateway/src/: main.rs  media.rs  schema.rs
gateway/src/adapters/: feishu.rs  googlechat.rs  line.rs  telegram.rs  wecom.rs
openshell/: Dockerfile
operator/: Cargo.toml  README.md
operator/examples/: fleet.yaml  kiro-01.yaml
operator/schema/: oabservice-v2.json
operator/src/: apply.rs  bootstrap.rs  create.rs  delete.rs  ingress.rs  main.rs  manifest.rs  scale.rs  secrets.rs
src/: adapter.rs  config.rs  ctl.rs  directives.rs  discord.rs  dispatch.rs  error_display.rs  gateway.rs  main.rs  multibot_cache.rs  secrets.rs  slack.rs  unified_adapter.rs
src/acp/: connection.rs  pool.rs  protocol.rs
