[package]
name = "openab"
version = "0.8.5"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "rustls_backend", "cache"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
anyhow = "1"
async-trait = "0.1"
futures-util = "0.3"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
rpassword = "7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "multipart", "json", "blocking"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
unicode-width = "0.2"
pulldown-cmark = { version = "0.13", default-features = false }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
cron = "0.16.0"
chrono = { version = "0.4.44", features = ["serde"] }
chrono-tz = "0.10.4"
sha2 = "0.10"
tempfile = "3.27.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
