[package]
name = "oabctl"
version = "0.1.0"
edition = "2021"
description = "CLI provisioner for OAB agents on ECS"

[[bin]]
name = "oabctl"
path = "src/main.rs"

[dependencies]
aws-config = "1.5"
aws-sdk-ecs = "1.53"
aws-sdk-s3 = "1.65"
aws-sdk-ssm = "1.52"
ecsctl = { git = "https://github.com/oablab/ecsctl.git", branch = "master" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.40", features = ["full"] }
toml = "0.8"
anyhow = "1.0"
